compiler/tests/fixtures/invalid/semantics/role_max_zero.viv
// Invalid: role with max of zero

action bad-max:
    roles:
        @actor:
            as: initiator
        @nobody*:
            as: bystander
            n: 0-0
